Fix image overflow

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ p {
     color: #E5E7EB;
 }
 
-/* Need to figure out how to get things to stop shrinking/growing and figure out why img is overflowing */
+/* Need to figure out how to get things to stop shrinking/growing */
 .content-and-image {
     display: flex;
     justify-content: space-between;
@@ -68,7 +68,6 @@ p {
     flex-direction: column;
     align-items: flex-start;
     width: 800px;
-    flex-shrink: 0;
     gap: 10px;
 }
 
